Switch to public maven repo (#29)